fix missing space between modal buttons

--- a/src/c3nav/site/static/site/css/c3nav.scss
+++ b/src/c3nav/site/static/site/css/c3nav.scss
@@ -129,7 +129,7 @@ main.account form {
     margin-bottom: 10px;
 }
 #modal-content :last-child {
-    margin: 0;
+    margin-bottom: 0;
 }
 
 #map {
